12_tkgm/yaml/k8s-cnf1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnf-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cnf-1
  template:
    metadata:
      name: cnf-1
      labels:
        app: cnf-1
    spec:
      containers:
        - name: cnf-1
          image: tacobayle/busybox-v1
          command: [ "sh", "-c"]
          args:
          - while true; do
              echo -e "HTTP/1.1 200 OK\n\n$(date)\nThis is my CNF 1\nNode is $(printenv MY_NODE_NAME)\nPod is $(printenv MY_POD_NAME)\nNamespace is $(printenv MY_POD_NAMESPACE)\nPod IP is $(printenv MY_POD_IP)\nPod Service account is $(printenv MY_POD_SERVICE_ACCOUNT)" | nc -l -p 80;
            done
      restartPolicy: Always
