12_tkgm/yaml/k8s-svc-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-test
spec:
  selector:
    app: cnf-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
