12_tkgm/yaml/svc_sctp.yml
apiVersion: v1
kind: Service
metadata:
  name: sctp
  annotations:
    aviinfrasetting.ako.vmware.com/name: infra-setting-1
spec:
  type: LoadBalancer
  ports:
    - port: 3861
      targetPort: 3868
      protocol: SCTP
  selector:
    app: sctp
