12_tkgm/yaml/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: web-front-1
spec:
  selector:
    app: cnf-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: avi-ingress-class
spec:
  controller: ako.vmware.com/avi-lb
  parameters:
    apiGroup: ako.vmware.com
    kind: AviInfraSetting
    name: infra-setting-1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: avi-ingress-class
  rules:
    - host: ingress.avi-telco.com
      http:
        paths:
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: web-front-1
                port:
                  number: 80
